# techdemo-spreadsheet-slint

./: Cargo.toml  README.md  index.html
assets/: manifest.json  sw.js
src/: app.rs  cell_cache.rs  debouncer.rs  http.rs  lib.rs  main.rs
ui/: color-picker.slint  main.slint  reference.slint  tableview.slint
