[package]
name = "spreadsheet-techdemo"
version = "0.1.0"
authors = ["Gerd Zellweger <gz@feldera.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]

[dependencies]
slint = { version = "1.9.2", features = ["serde"] }
log = "0.4"
ehttp = { version = "0.5", features = ["streaming", "json"] }
ewebsock = { version = "0.8.0", features = ["tls"] }
lru = "0.12.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
send_wrapper = "0.6.0"
opener = "0.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.70", features = ["console"] }


[workspace]
